<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="8"
    android:background="#ffffff"
    tools:context=".login">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="244dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="407dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="0dp"
        android:orientation="vertical"
        android:weightSum="6">

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/input"
            android:drawableLeft="@drawable/email"
            android:ems="10"
            android:hint="@string/reg_email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/colorAccent1"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/loign_pwd"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/input"
            android:drawableLeft="@drawable/password"
            android:ems="10"
            android:hint="@string/reg_pwd"
            android:inputType="textPassword"
            android:textColorHint="@color/colorAccent1"
            android:textSize="16sp" />

        <Button
            android:id="@+id/loginbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:onClick="login"
            android:text="@string/login_btn" />

        <TextView
            android:id="@+id/singup_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="login_signup"
            android:text="@string/login_singup"
            android:textColor="@color/login_singup_text" />

        <TextView
            android:id="@+id/loginwiht"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="login_with_google"
            android:text="@string/login_with"
            android:textColor="@color/login_with" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:onClick="singupss"
            app:srcCompat="@drawable/google" />
    </LinearLayout>

</RelativeLayout>