<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="8"
    android:background="#ffffff"
    tools:context=".reg">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="244dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="407dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="0dp"
        android:orientation="vertical"
        android:weightSum="5">

        <EditText
            android:id="@+id/reg_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/input"
            android:drawableLeft="@drawable/email"
            android:ems="10"
            android:hint="@string/reg_email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/colorAccent1"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/reg_pwd"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/input"
            android:drawableLeft="@drawable/password"
            android:ems="10"
            android:hint="@string/reg_pwd"
            android:inputType="textPassword"
            android:textColorHint="@color/colorAccent1"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/reg_cpwd"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/input"
            android:drawableLeft="@drawable/password"
            android:ems="10"
            android:hint="@string/reg_cpwd"
            android:inputType="textPassword"
            android:textColorHint="@color/colorAccent1"
            android:textSize="16sp" />

        <Button
            android:id="@+id/reb_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button"
            android:onClick="regbutn"
            android:text="@string/reg_btn" />

    </LinearLayout>

</RelativeLayout>