<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".detalisPost">

    <include layout="@layout/appbar_layout"
        android:id="@+id/layout_detaliview"/>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="55dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="0dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:orientation="horizontal"
            android:padding="5dp">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/_detlis_profileiamge"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="4dp"
                android:scaleType="centerCrop"
                android:src="@drawable/profile">

            </de.hdodenhof.circleimageview.CircleImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/_detlis_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/allpost_username"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:orientation="horizontal"
                    android:padding="2dp">

                    <TextView
                        android:id="@+id/_detlis_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/allpost_time"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="13sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/_detlis_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/allpost_time"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="13sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/_detlis_contetn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:text="@string/allpost_content"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/_detlis_imageViewpost"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_margin="3dp"
                    android:layout_marginBottom="0dp"
                    android:adjustViewBounds="true"

                    android:scaleType="centerCrop" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <TextView
        android:id="@+id/uid_detlis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="311dp"
        android:text="TextView"
        android:visibility="invisible"/>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="48dp"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="335dp"
        android:layout_marginLeft="335dp"
        android:layout_marginBottom="623dp"
        app:menu="@menu/postacitivitys" />


</RelativeLayout>