<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".AllPost"
    android:id="@+id/zzz">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/back"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:orientation="horizontal"
            android:padding="5dp">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/allpost_profileiamge"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="4dp"
                android:scaleType="centerCrop"
                android:src="@drawable/profile">

            </de.hdodenhof.circleimageview.CircleImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/allpost_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/allpost_username"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/menu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:padding="5dp"
                        android:text="&#8942;"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="4"
                    android:orientation="horizontal"
                    android:padding="2dp">

                    <TextView
                        android:id="@+id/allpost_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/allpost_time"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="13sp"
                        android:textStyle="bold" />
                    android:layout_weight="1"

                    <TextView
                        android:id="@+id/allpost_date"
                        android:layout_width="149dp"
                        android:layout_height="21dp"
                        android:layout_weight="2"
                        android:text="@string/allpost_time"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="13sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/allpost_contetn"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_weight="4"
                android:text="@string/allpost_content"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/readmore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Read More....." />


        </LinearLayout>

        <ImageView
            android:id="@+id/allpost_imageViewpost"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="3dp"
            android:layout_marginBottom="0dp"
            android:adjustViewBounds="true"

            android:scaleType="centerCrop" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:background="@drawable/com"
            android:layout_weight="4">

            <TextView
                android:id="@+id/likecount"
                android:layout_width="87dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="58dp"
                android:layout_marginLeft="58dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="0" />


            <com.like.LikeButton

                app:icon_type="heart"
                app:icon_size="25dp"
                android:id="@+id/star_button"
                android:layout_width="wrap_content"
                app:anim_scale_factor="2.5"
                android:layout_height="wrap_content"/>

                />

            <ImageView
                android:id="@+id/commentbtn"
                android:layout_width="79dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="22dp"
                android:layout_marginRight="22dp"
                android:layout_marginBottom="0dp"
                app:srcCompat="@drawable/c" />

            <TextView
                android:id="@+id/ccounter"
                android:layout_width="32dp"
                android:layout_height="29dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="7dp"
                android:layout_marginRight="7dp"
                android:layout_marginBottom="6dp"
                android:text="TextView" />

        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/uid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="206dp"
        android:layout_marginLeft="206dp"
        android:layout_marginBottom="324dp"
        android:text="TextView"
        android:visibility="invisible" />


</RelativeLayout>